fixed lang selector spacing on mobile

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -588,6 +588,7 @@ button {
             align-items: flex-start;
             margin-left: 0;
             margin-right: 0;
+            margin-bottom: 2.5rem;
             &-current {
                 height: 5.2rem;
                 width: 5.2rem;
